[package]
name = "git-yawn"
version = "0.1.1"
edition = "2021"
description = "Yet Another Worktree Navigator"
license = "MIT"

[[bin]]
name = "yawn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
