[package]
name = "git-yawn"
version = "0.1.2"
edition = "2021"
rust-version = "1.85.0"
description = "Yet Another Worktree Navigator"
license = "MIT"
repository = "https://github.com/ComeBertrand/yawn"
homepage = "https://github.com/ComeBertrand/yawn"
readme = "README.md"
keywords = ["git", "worktree", "cli", "terminal", "project"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "yawn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
